--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ body {
 h1 {
   text-align: center;
   font-size: 40px;
+  color: #10316b;
 }
 select {
   display: block;
@@ -20,12 +21,13 @@ select {
   padding: 10px;
   border-radius: 5px;
   font-size: 18px;
+  border-color: #10316b;
 }
 .city {
   display: flex;
   justify-content: space-between;
   margin: 10px 0;
-  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+  border-bottom: 1px dashed #10316b;
   padding: 30px 0;
 }
 .city:last-child {
@@ -34,6 +36,7 @@ select {
 h2 {
   margin: 0 0 5px;
   font-size: 28px;
+  color: #10316b;
 }
 .date {
   opacity: 0.7;
@@ -41,10 +44,13 @@ h2 {
 .time {
   font-size: 48px;
   font-weight: bold;
+  color: #10316b;
 }
 .time small {
   font-size: 24px;
 }
 footer {
   text-align: center;
+  font-size: 14px;
+  color: #10316b;
 }
